<?xml version="1.0" encoding="utf-8"?>
<!--
Menu Fragment XML Layout File
-->

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="end"
        android:clickable="true"
        android:background="@android:color/black"
    android:id="@+id/label">
        <!--android:background="@android:color/black"--><![CDATA[
    >

    ]]>

    <Spinner
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:id="@+id/spinnerFrequency"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:transitionGroup="false"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="25dp" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:id="@+id/spinnerDistance"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/setName"
        android:id="@+id/textView"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/spinnerFrequency"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/setLocationDistance"
        android:id="@+id/textView2"
        android:layout_marginRight="15dp"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/setLocationFrequency"
        android:id="@+id/textView3"
        android:layout_below="@+id/spinnerDistance"
        android:layout_alignStart="@+id/spinnerDistance"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/setObservation"
        android:id="@+id/textView4"
        android:layout_above="@+id/editTextObservation"
        android:layout_alignStart="@+id/editTextObservation" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextObservation"
        android:hint="@string/hintObservationEditText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="74dp"
        android:layout_alignStart="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:hint="@string/hintNameEditText"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignEnd="@+id/editTextObservation"
        android:scrollIndicators="end" />

</RelativeLayout>
