<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/root">
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/main">

<FrameLayout
    android:layout_width="200dp"
    android:layout_height="150dp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentStart="true"
    android:id="@+id/textMapSwap">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/textLocation"
        android:layout_marginTop="62dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:maxLines="15"
        android:gravity="bottom"
        android:scrollbars="vertical" />
</FrameLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/startButton"
        android:layout_above="@+id/descritption"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/stopButton"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/descritption"
        android:text="@string/distance"
        android:gravity="center"
        android:layout_below="@+id/stopButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:id="@+id/distanceText"
        android:gravity="center"
        android:layout_below="@+id/descritption"
        android:layout_alignStart="@+id/descritption" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/distanceText"
        android:layout_alignStart="@+id/distanceText"
        android:layout_alignEnd="@+id/distanceText"
        android:text="@string/batteryLevel"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:id="@+id/battLevel"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_marginTop="10dp" />

</RelativeLayout>
</FrameLayout>